<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- **** App and activities **** -->
    <string name="app_name">AndroLight</string>
    <string name="action_main">AndroLight</string>
    <string name="action_settings">Settings</string>
    
    <!-- **** Basic strings **** -->
    <string name="OKoption">OK</string>
    <string name="YESoption">Yes</string>
    <string name="NOoption">No</string>
    
    <!-- **** Main activity **** -->
    <!-- Batery info pop-up -->
    <string name="battery_info_popup_title">Battery Information</string>
    <string name="battery_level_info">"Battery level :</string>
    <string name="battery_temperature_info">Temperature :</string>
    <string name="battery_technology_info">Technology :</string>
    <string name="battery_good_health_info">Good battery health !</string>
    <string name="battery_bad_health_info">You might face some issues with your battery :(...</string>
    <!-- Low battery warning pop-up -->
    <string name="low_battery_warning_popup_title">Low Battery Warning</string>
    <string name="low_battery_warning_popup_message_part1">The level of your battery (</string>
    <string name="low_battery_warning_popup_message_part2">%) is below the threshold you defined (</string>
    <string name="low_battery_warning_popup_message_part3">%)\n\nAre you sure you want to turn your flash on ?</string>
    <!-- Flash not supported pop-up -->
    <string name="flash_not_supported_popup_title">Flash not supported !</string>
    <string name="flash_not_supported_popup_message">Sorry, your device doesn\'t support flash light!</string>
    
    
    
    <string name="action_save">Save</string>
    <string name="main_button_decription">On/Off button</string>
    <string name="ligtOnStartupDescription">Light on startup</string>
    <string name="ligtOnStartupDetails">This option, if activated, turns light on immediately when starting the application.</string>
    <string name="timeToSleepDescription">Auto shut down</string>
    <string name="timeToSleepDetails">Use this option to activate a timer which will automatically shut light down when time limit is reached (useful to save battery when light left activated fo too long by mistake). The time limit is configurable (up to 10:45mins).</string>
    <string name="timeToSleepSuboptionPart1">Shut light down after</string>
    <string name="timeToSleepSuboptionPart2">mins.</string>
    <string name="timeToSleepDialogTitle">Shut light down after (mins):</string>
    <string name="defaultTimeToSleepSuboption">2</string>
    <string name="settingsUpdateOK">Settings successfully updated !</string>
    <string name="noTimeSet">--:--</string>
    <string name="application_logo_text">Application logo</string>
    <string name="settings_activity_title">Settings</string>
    <string name="description_none">No description</string>
    <string name="save_btn">Save</string>
    <string name="time_set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="set_btn">set</string>
    <string name="configurationIssue">Invalid configuration</string>
    <string name="configurationTimeToSleepIssueDetails">* Please provide a timer limit exceeding 0ms.</string>
    <string name="configurationLowBatteryWarningIssueDetails">* Please provide a battery threshold exceeding 0%.</string>
    <string name="languageEnglish">English</string>
    <string name="languageFrench">Français</string>
    <string name="languageSelectionDescription">App Language</string>
    <string name="languageSelectionDetails">Language used in the app.</string>
    <string name="action_battery">Battery Info</string>
    <string name="more_info">More Info</string>
    <string name="give_me_a_beer">Give me a beer</string>
	<string name="more_info_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="support_us_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
	<string name="low_battery_warning_feature_name">Low battery warning</string>
	<string name="low_battery_warning_feature_details">This feature displays a popup whenever you try to turn light on when having battery level below a given threshold.</string>
	<string name="low_battery_warning_threshold_text">Current threshold :</string>
	<string name="time_to_sleep_timeset_text_part1">Current setting :</string>
	<string name="time_to_sleep_timeset_text_part2">mins</string>
	
</resources>