<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/language_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="FEATURES"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="#FF909090" />

        <RelativeLayout
            android:id="@+id/fibrillation_setting"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/light_on_startup_checkbox"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/language_setting2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Active Fibrillation"
                    android:textColor="#65b1eb"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/language_settin3g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Issues a vibration alert to the device every thirty (30) seconds, if the light is on"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/light_on_startup_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="#FF909090" />

        <RelativeLayout
            android:id="@+id/time_to_sleep"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/time_to_sleep_checkbox"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/time_to_sleep_feature_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/timeToSleepDescription"
                    android:textColor="#65b1eb"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_to_sleep_feature_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/timeToSleepDetails"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/time_to_sleep_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/language_setting22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:text="CONFIGURATION"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="#FF909090" />

        <RelativeLayout
            android:id="@+id/light_on_start_up"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/light_on_start_up_checkbox"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/light_on_start_up_feature_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Flash Auto On"
                    android:textColor="#65b1eb"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/light_on_start_up_feature_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Automatically turns flash on whenever app is opened"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/light_on_start_up_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="#FF909090" />

        <RelativeLayout
            android:id="@+id/fibrillation_setting5552"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/language_spinner"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/language_setting225552"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/languageSelectionDescription"
                    android:textColor="#65b1eb"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/language_settin32555g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/languageSelectionDetails"
                    android:textSize="14sp" />
            </LinearLayout>

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/language_setting2332"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:text="SUPPORT"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="#FF909090" />

        <RelativeLayout
            android:id="@+id/fibrillation_setting3332"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/language_setting223332"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Rating and Review"
                    android:textColor="#65b1eb"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/language_settin33333g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="If you find this app helpful, leave a (positive) rating/review of the app in the playstore (your feedback is much appreciated)"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="#FF909090" />

        <RelativeLayout
            android:id="@+id/fibrillation_setting33432"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/language_setting2233342"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Email Developer"
                    android:textColor="#65b1eb"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/language_settin33433g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="Send me any feedback, requests or suggestions you may have. Help me make this app even better for you."
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>